--- a/VKApp/View/Reusable Cells/CollectionCell/ImagesCVCell.xib
+++ b/VKApp/View/Reusable Cells/CollectionCell/ImagesCVCell.xib
@@ -4,34 +4,42 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="imagesInNewsCVCell" reuseIdentifier="imagesInCVCell" id="gTV-IL-0wX" customClass="ImagesCVCell" customModule="VKApp" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imagesCell" id="gTV-IL-0wX" customClass="ImagesCVCell" customModule="VKApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KFc-KT-OEu">
-                        <rect key="frame" x="1" y="1" width="298" height="298"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="krk-RL-8gy">
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                        <color key="tintColor" systemColor="systemGray6Color"/>
                     </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="KFc-KT-OEu" secondAttribute="bottom" constant="1" id="BvD-U5-pJs"/>
-                <constraint firstItem="KFc-KT-OEu" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="1" id="l2L-aL-ZBV"/>
-                <constraint firstItem="KFc-KT-OEu" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="1" id="mga-xh-ucT"/>
-                <constraint firstAttribute="trailing" secondItem="KFc-KT-OEu" secondAttribute="trailing" constant="1" id="qO3-IU-PZE"/>
+                <constraint firstItem="krk-RL-8gy" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="AZS-f6-irX"/>
+                <constraint firstItem="krk-RL-8gy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="RIj-6p-vB1"/>
+                <constraint firstAttribute="bottom" secondItem="krk-RL-8gy" secondAttribute="bottom" id="dnj-uX-ldt"/>
+                <constraint firstAttribute="trailing" secondItem="krk-RL-8gy" secondAttribute="trailing" id="ula-5a-hxj"/>
             </constraints>
             <connections>
-                <outlet property="ImageViewInCVCell" destination="KFc-KT-OEu" id="F4l-s9-8GG"/>
+                <outlet property="imageNews" destination="krk-RL-8gy" id="fG5-KP-ygP"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="78.348214285714278"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
