--- a/VKApp/View/Reusable Cells/NewsCells/FooterCell.xib
+++ b/VKApp/View/Reusable Cells/NewsCells/FooterCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="FooterCell" customModule="VKApp" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="footerCell" id="KGk-i7-Jjw" customClass="FooterCell" customModule="VKApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -18,22 +18,22 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RwK-ZL-gwI">
-                        <rect key="frame" x="5" y="6.5" width="54.5" height="31"/>
+                        <rect key="frame" x="5" y="6.5" width="45.5" height="31"/>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system" title="0"/>
+                        <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system"/>
                         <connections>
                             <action selector="pressedLikeNews:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="wEg-No-DOw"/>
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pKB-En-wJA">
-                        <rect key="frame" x="60.5" y="6.5" width="57.5" height="31"/>
+                        <rect key="frame" x="55.5" y="6.5" width="48.5" height="31"/>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" image="bubble.left" catalog="system" title="3"/>
+                        <buttonConfiguration key="configuration" style="plain" image="bubble.left" catalog="system"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d0o-7x-dDZ">
-                        <rect key="frame" x="119" y="6.5" width="53" height="31"/>
+                        <rect key="frame" x="109" y="6.5" width="46.5" height="31"/>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" image="arrowshape.turn.up.right" catalog="system" title="1"/>
+                        <buttonConfiguration key="configuration" style="plain" image="arrowshape.turn.up.right" catalog="system"/>
                     </button>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eye" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="RZP-N6-jVt">
                         <rect key="frame" x="261.5" y="13.5" width="26" height="16.5"/>
@@ -48,14 +48,14 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="1dw-Oy-EOn" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="EPJ-Wr-4Pc"/>
-                    <constraint firstItem="d0o-7x-dDZ" firstAttribute="leading" secondItem="pKB-En-wJA" secondAttribute="trailing" constant="1" id="M9N-oR-ln4"/>
+                    <constraint firstItem="d0o-7x-dDZ" firstAttribute="leading" secondItem="pKB-En-wJA" secondAttribute="trailing" constant="5" id="M9N-oR-ln4"/>
                     <constraint firstAttribute="trailing" secondItem="1dw-Oy-EOn" secondAttribute="trailing" constant="10" id="NXP-DM-8mf"/>
                     <constraint firstItem="RZP-N6-jVt" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="PvM-Mo-vXu"/>
                     <constraint firstItem="pKB-En-wJA" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="cg8-Er-Fae"/>
                     <constraint firstItem="RwK-ZL-gwI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="dEH-QG-16g"/>
                     <constraint firstItem="d0o-7x-dDZ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="dQ7-79-mMg"/>
                     <constraint firstItem="RwK-ZL-gwI" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="mKK-5g-OIK"/>
-                    <constraint firstItem="pKB-En-wJA" firstAttribute="leading" secondItem="RwK-ZL-gwI" secondAttribute="trailing" constant="1" id="n5r-In-SlO"/>
+                    <constraint firstItem="pKB-En-wJA" firstAttribute="leading" secondItem="RwK-ZL-gwI" secondAttribute="trailing" constant="5" id="n5r-In-SlO"/>
                     <constraint firstItem="1dw-Oy-EOn" firstAttribute="leading" secondItem="RZP-N6-jVt" secondAttribute="trailing" constant="2" id="xtn-on-4Pp"/>
                 </constraints>
             </tableViewCellContentView>
