--- a/VKApp/View/Reusable Cells/NewsCells/HeaderCell.xib
+++ b/VKApp/View/Reusable Cells/NewsCells/HeaderCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="50" id="KGk-i7-Jjw" customClass="HeaderCell" customModule="VKApp" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="headerCell" rowHeight="50" id="KGk-i7-Jjw" customClass="HeaderCell" customModule="VKApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -42,7 +42,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="newsAvatarImage" destination="cFG-Q1-6Rf" id="vLH-5u-oDH"/>
-                <outlet property="newsGroupName" destination="t2A-WG-mT8" id="ztg-ep-qxy"/>
+                <outlet property="newsName" destination="t2A-WG-mT8" id="kLx-a8-bg7"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="78.348214285714278"/>
         </tableViewCell>
